# ece2t6-bot

./: .gitignore  LICENSE  README.md  bot.py  config.example.ini  pyproject.toml  run.py
ece2t6_bot/: bot.py
ece2t6_bot/cogs/: dm.py  private.py  public.py  text_cmds.py
ece2t6_bot/scrape/: data.example.json  data.json  payload.json  webscrape.py
